assets/less/general/button.less
.button {
  align-items: center;
  background-color: var(--white-color);
  border: 1px solid var(--light-gray-color);
  border-radius: 3px;
  color: var(--brand-color);
  cursor: pointer;
  display: inline-flex;
  font-size: 11px;
  font-weight: 800;
  height: 36px;
  justify-content: center;
  letter-spacing: .5px;
  outline: none;
  padding: 0 15px;
  text-transform: uppercase;

  &:hover {
    border-color: var(--mid-gray-color);
    opacity: 1;
  }

  .icon-loading {
    display: none;
  }

  &.loading {
    text-indent: -9999px;

    .icon-loading {
      display: block;
    }
  }
}

.button-secondary {
  color: var(--darker-gray-color);
}

.button-icon {
  background-color: transparent;
  border: 0;
  color: var(--darker-gray-color);
  cursor: pointer;
  display: inline-flex;
  height: 30px;
  justify-content: center;
  outline: none;
  padding: 0;
  width: 30px;

  &:hover .icon {
    opacity: .8;
  }
}

